# zwei

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utf16le_utils.rs  utils.rs
src-tauri/src/commands/: checksum.rs  download.rs  file_utils.rs  game.rs  mod.rs  patch.rs  sandboxie.rs  steam.rs
src-tauri/windows/templates/: main.wxs
src/components/: CloneLimbus.tsx  Modal.tsx  SettingsButton.tsx  StartLethe.tsx  UpdateLetheButton.tsx  UpdateLimbus.tsx  ViewLetheFilesButton.tsx
src/context/: ErrorContext.tsx  ToastContext.tsx  useErrorHandler.ts
