[package]
name = "Zwei"
version = "0.1.0"
description = "Your Shield"
authors = ["Limi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zwei_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12.9", features = ["blocking"] }
zip = "2.2.1"
steamnvke = { git = "https://github.com/LEAGUE-OF-NINE/steamnvke" }
pelite = {git = "https://github.com/LEAGUE-OF-NINE/pelite" }
tokio = "1.42.0"
futures = "0.3.31"
ini = "1.3.0"
tauri-plugin-store = "2"
warp = "0.3.7"
